--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -18,22 +18,6 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
     padding-left: 0.5em;
 }
 
-body {
-    padding-top: 210px;
-}
-
-body.logged-in {
-    padding-top: 264px !important;
-}
-
-body.logged-in.splash-page {
-    padding-top: 213px !important;
-}
-
-body.splash-page {
-    padding-top: 165px;
-}
-
 body.splash-page #sliding-popup.sliding-popup-top{
 	margin-top: 45px;
 }
@@ -744,25 +728,25 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 /* Home */
 .home-intro{
 	min-height: 696px;
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 	.first-row-left-column, .second-row-right-column{
 		background: url(../images/background-home-boxes.png) no-repeat #9ebc00;
-    text-align: center;
-    padding-bottom: 2em;
+		text-align: center;
+		padding-bottom: 2em;
     	h1{
-    		padding-top: 2em;
-    		border-bottom: 0;
-    		font-size: 1.7em;
-    		font-style: italic;
-    		font-weight: 400;
-        color:#dee999;
+			padding-top: 2em;
+			border-bottom: 0;
+			font-size: 1.7em;
+			font-style: italic;
+			font-weight: 400;
+			color:#dee999;
     	}
     	h2{
-    		color: #FFF;
-    		font-style: normal;
-    		font-weight: 600;
-        font-size: 2.6em;
+			color: #FFF;
+			font-style: normal;
+			font-weight: 600;
+			font-size: 2.6em;
     	}
     	p{
     		color: #FFF;
@@ -780,12 +764,12 @@ header.navbar-default .navbar-collapse nav ul.menu li {
     }
 
     .first-row-right-column, .second-row-left-column{
-    	background: url(../images/background-right-column.png) no-repeat #e2e2e2;
-    	background-size: cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
+		background: url(../images/background-right-column.png) no-repeat #e2e2e2;
+		background-size: cover;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
     }
 
     .icon-play-button{
@@ -821,14 +805,14 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .recommended-tools{
 	h3{
-    color: #00309d;
-    margin-top: 0;
-    font-weight: 400;
+	    color: #00309d;
+	    margin-top: 0;
+	    font-weight: 400;
 	}
 }
 
 .recommended-tools-flex{
-  display: flex;
+ 	display: flex;
 }
 
 .recommended-tool{
@@ -837,72 +821,71 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	color: white;
 	text-align: right;	
 	background: transparent;
-  color: #00309d;
-  border: 2px solid #bcd75b;
-  padding: 1em 1em;
-  border-radius: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 15px;
-  font-weight: 600;
-  min-height: 78px;
-  min-width: 220px;
-  span{
-    display: block;
-    width: 90px;
-  }
+	color: #00309d;
+	border: 2px solid #bcd75b;
+	padding: 1em 1em;
+	border-radius: 7px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	font-size: 15px;
+	font-weight: 600;
+	min-height: 78px;
+	min-width: 220px;
+  	span{
+	    display: block;
+	    width: 90px;
+	}
 }
 
 .recommended-tool.campaign-guide{
 	background: url(../images/related-resources/rr-campaign-guide-v2.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.tools-resources{
 	background: url(../images/related-resources/rr-tools-and-resources-v2.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.priority-areas{
 	background: url(../images/related-resources/rr-priority-areas.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.european-week{
 	background: url(../images/related-resources/rr-european-weeek.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.osh-wiki{
 	background: url(../images/related-resources/rr-osh-wiki.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.osh-newsletter{
 	background: url(../images/related-resources/rr-osh-newsletter.png) no-repeat 1em;
-  background-size: 40px;
+  	background-size: 40px;
 }
-
 
 .recommended-tool.campaign-guide:hover{
 	background: url(../images/related-resources/rr-campaign-guide-v2-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.tools-resources:hover{
 	background: url(../images/related-resources/rr-tools-and-resources-v2-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.priority-areas:hover{
 	background: url(../images/related-resources/rr-priority-areas-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.european-week:hover{
 	background: url(../images/related-resources/rr-european-weeek-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.osh-wiki:hover{
 	background: url(../images/related-resources/rr-osh-wiki-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 .recommended-tool.osh-newsletter:hover{
 	background: url(../images/related-resources/rr-osh-newsletter-hover.png) no-repeat 1em #00309d;
-  background-size: 40px;
+  	background-size: 40px;
 }
 
 .recommended-tool:hover{
@@ -960,8 +943,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		}
 		.title-news{
 			font-size: 1.2em;
-		font-style: italic;
-		color: #003399;
+			font-style: italic;
+			color: #003399;
 		}
 		.summary-news{
 			margin-bottom: 1em;
@@ -976,6 +959,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	text-transform: uppercase;
 	padding: 2px 7px 2px 7px;
 	font-size: 12px;
+	transition: 300ms;
+	background-position: 110%;
 	&:hover{
 		text-decoration: none;
 		color:#58595b;
@@ -984,8 +969,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		border-bottom-left-radius: 3px;
 		border-top-right-radius: 15px;
 		border-bottom-right-radius: 15px;
-		background: url(../images/ico-plus-20-hover.png) no-repeat 98% 0px;
+		background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
 		padding-right: 2em;
+		right: 0;
+		transition: 300ms;
 	}
 }
 
@@ -994,12 +981,12 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 
 .box-news div.news-item:nth-child(2) {
-  padding-top: 0;
-  border-top: 0;
-  .news-item-content{
-   	margin-left: 2em;
-   	margin-right: 0;
-  }
+	padding-top: 0;
+	border-top: 0;
+  	.news-item-content{
+	   	margin-left: 2em;
+	   	margin-right: 0;
+	}
 }
 
 .news-item-image-left{
@@ -1012,13 +999,13 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	}
 	h3{
 		color: #00309d;
-    margin-top: 0;
-    font-weight: 400;
-    background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
-    span{
-    	background: #FFF;
-    	padding-right: 0.7em;
-    }
+	    margin-top: 0;
+	    font-weight: 400;
+	    background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
+	    span{
+	    	background: #FFF;
+	    	padding-right: 0.7em;
+	    }
 	}
 	.col-md-8{
 		padding-left:0;
@@ -1037,28 +1024,28 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .box-events{
 	background: #FFF;
-  border-radius: 7px;
-  float: left;
-  padding-left: 0.5em;
-  h3:before{
-   	background: url(../images/events-h3-ico.png) no-repeat #ffffff;
-   	background-position: -6px -4px;
-    content: ' ';
-    display: block;
-    width: 45px;
-    height: 45px;
-    float: left;
-  }
+	border-radius: 7px;
+	float: left;
+	padding-left: 0.5em;
+	h3:before{
+		background: url(../images/events-h3-ico.png) no-repeat #ffffff;
+		background-position: -6px -4px;
+		content: ' ';
+		display: block;
+		width: 45px;
+		height: 45px;
+		float: left;
+	}
 
-  .content-date-country {
-    border-top: 1px solid #CCC;
-    margin-top: 1.1em;
-    padding-top: 0.7em;
-  }
+ 	.content-date-country {
+		border-top: 1px solid #CCC;
+		margin-top: 1.1em;
+		padding-top: 0.7em;
+	}
 
-  div.content-date-country:nth-child(2) {
-  	padding-top: 0;
-  	border-top: 0;
+ 	div.content-date-country:nth-child(2) {
+  		padding-top: 0;
+  		border-top: 0;
 	}
 	.content-buttom{
 		clear: both;
@@ -1086,8 +1073,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 #block-views-newsletter-social-media .checkbox label:before{
 	border: 2px solid #FFF;
-  background: #FFF;
-  border-radius: 5px;
+	background: #FFF;
+	border-radius: 5px;
 } 
 
 
@@ -1095,17 +1082,17 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 #block-subscribe-form{
 	margin: 5px 0 5px 0;
 	input{
-    height: 34px;
-    font-size: 1em;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+	    height: 34px;
+	    font-size: 1em;
+	    border-top-left-radius: 5px;
+	    border-bottom-left-radius: 5px;
 	}
 	button{
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding-bottom: 8px;
-    min-width:150px;
-    height: 34px;
+	    border-top-right-radius: 5px;
+	    border-bottom-right-radius: 5px;
+	    padding-bottom: 8px;
+	    min-width:150px;
+	    height: 34px;
 	}
 	span{
 		font-family: 'Open Sans';
@@ -1119,72 +1106,72 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .newsletter-social-media{
 	min-height: 299px;
 	margin-bottom: 1em;
-  .social-media-links{ 
-    padding-top: 15px;
-    a{
-      width: 50px;
-      height: 50px;
-      background-size: inherit !important;
-    }
-  }
+  	.social-media-links{ 
+    	padding-top: 15px;
+	    a{
+	      width: 50px;
+	      height: 50px;
+	      background-size: inherit !important;
+	    }
+  	}
 	.newsletter{
 		padding-left:0;
 		border-right: 1px dashed white;
 		margin-bottom: 1.5em;
-    padding-right: 1.5em;
+		padding-right: 1.5em;
 		h3{
 			color: white;
-	    margin-top: 0;
-	    margin-bottom: 1em;
-	    font-weight: 400;
-	    span{
-			  padding-right: 0.7em;
-        padding-left: 5px;
+			margin-top: 0;
+			margin-bottom: 1em;
+			font-weight: 400;
+	    	span{
+				padding-right: 0.7em;
+				padding-left: 5px;
 			}
-    }
+    	}
 	}
 	.social-media{
-    padding-left: 2em;
-      h3{
-  		color: white;
-      margin-top: 0;
-      margin-bottom: 1em;
-      font-weight: 400;
-      span{
-  		  padding-right: 0.7em;
-        padding-left: 5px;
+		padding-left: 2em;
+      	h3{
+			color: white;
+			margin-top: 0;
+			margin-bottom: 1em;
+			font-weight: 400;
+	      	span{
+				padding-right: 0.7em;
+				padding-left: 5px;
+	  		}
   		}
   	}
-  }
 	p{
 		color: #FFF;
-    font-size: 1.2em;
-    width: 80%;
+		font-size: 1.2em;
+		width: 80%;
 	}
 }
 
 .newsletter-social-media .newsletter h3:before{
 	content: ' ';
-  width: 35px;
-  display: block;
-  height: 25px;
-  float: left;
+	width: 35px;
+	display: block;
+	height: 25px;
+	float: left;
 	background: url(../images/ico-newsletter.png) no-repeat;
 }
 
 .newsletter-social-media .social-media h3:before{
 	content: ' ';
-  width: 30px;
-  display: block;
-  height: 28px;
-  float: left;
+	width: 30px;
+	display: block;
+	height: 28px;
+	float: left;
 	background: url(../images/ico-social-media.png) no-repeat;
 }
 
 
 .social-media-links{ 
 	display: flex;
-	a {
+	a{
   	width: 33px;
   	height: 33px;
   	margin-left: 10px;
@@ -1235,10 +1222,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 #block-views-priority-areas{ 
 	padding-top: 1em;
-  clear: both;
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-bottom: 40px;
+	clear: both;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-bottom: 40px;
 	h3{
    	color:#00309d;
 		margin-top: 0;
@@ -1260,7 +1247,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
-  -webkit-flex-flow: row wrap;
+  	-webkit-flex-flow: row wrap;
 	justify-content: center;
 	margin-top: 1.5em;
 }
@@ -1342,8 +1329,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
       }
     }
   }
-
-
 }
 
 .region-footer{
@@ -1357,20 +1342,28 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 
 .footer-section{
-	font-size: 12px;
+	font-size: 12.5px;
 	min-height: 180px;
-  margin: 2.5em 0;
+	margin: 2.5em 0;
 	div{
 		min-height: 180px;
 		border-left: 1px solid white;
 	}
 	ul{
-		padding-left: 15px;
+		padding-left: 20px;
 		padding-top: 4px;
+		list-style-type: none;
+		li a:before {
+			content: "-";
+			text-indent: -10px;
+			display: inline-block;
+			float: left;
+			margin-top: -1px;
+		}
 		a{
 			display: block;
-    	margin-left: -0.5em;
-      padding-right:0;
+			margin-left: -0.5em;
+			padding-right:0;
 		}
 	}
 }
@@ -1380,7 +1373,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 
 
-/*Introductory Page > Article*/
+/* Introductory Page > Article */
 
 .breadcrumb{
 	background: transparent;
@@ -1661,7 +1654,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	}
 }
 
-/*PUBLICATIONS*/
+/* PUBLICATIONS */
 
 /* Latest Publications */
 
@@ -2380,9 +2373,7 @@ span.pages{
 	}
 }
 
-
-/*dev 3*/
-/*Introductory page*/
+/* Introductory page */
 
 .views-row{
 	padding: 1em;
@@ -2462,7 +2453,7 @@ span.pages{
 	}
 }
 
-/*Publication detail*/
+/* Publication detail */
 .publication-detail{
 	background: url('../images/background-publication-detail.png') no-repeat right top;
 	.back-to-publications{
@@ -2737,8 +2728,11 @@ span.pages{
 	}
 	.region-sidebar-first{
 		.block.block-facetapi{
-			h2:after{
-				color:#c1e000;
+			h2{
+				padding-bottom: 0.5em;
+				&:after{
+					color:#c1e000;
+				}
 			}
 		} 
 	}
@@ -2774,39 +2768,43 @@ span.pages{
 			cursor: pointer;
 		}
 	}
+
 	.view-footer{
 		display: block;
 	}
+
+	.region-sidebar-first{
+
+		#block-osha-search-osha-search-clear-filters .clear-wrapper > a{
+			border-bottom: 0;
+		}
+
+		.block.block-facetapi h2{
+			font-size: 1.8rem;
+		    color: #003399 !important;
+		    font-weight: normal !important;
+		}
+
+	}
+
+	.views-widget-sort-by > .form-item-sort-by > label:after{
+		content: '';
+	}
+
+	.views-widget-sort-by > .form-item-sort-by > label{
+		margin-top: 0;
+		margin-bottom: 7px;
+		font-style: normal;
+	}
+
+	#views-exposed-form-search-site .views-submit-button button{
+		background: #003399 !important;
+		height: 36px;
+		padding: 0 1em;
+	    margin-top: 24px;
+	    border-radius: 5px;
+	    &:hover{
+	    	opacity: 0.8;
+	    }
+	}
 } 
-
-.page-search .region-sidebar-first .block.block-facetapi .facetapi-facetapi-checkbox-links {
-    padding-top: 0.5em;
-}
-
-.page-search .views-widget-sort-by > .form-item-sort-by > label:after{
-	content: '';
-}
-
-.page-search #views-exposed-form-search-site .views-submit-button button{
-	background: #003399 !important;
-	padding: 0 1em;
-    margin-top: 23px;
-    border-radius: 5px;
-    &:hover{
-    	opacity: 0.8;
-    }
-}
-
-.page-search .views-widget-sort-by > .form-item-sort-by > label{
-	margin-top: 0;
-}
-
-.page-search .region-sidebar-first #block-osha-search-osha-search-clear-filters .clear-wrapper > a{
-	border-bottom: 0;
-}
-
-.page-search .region-sidebar-first .block.block-facetapi h2{
-	font-size: 1.8rem;
-    color: #003399 !important;
-    font-weight: normal !important;
-}
