HW20-66 - 2nd level testing

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -11157,7 +11157,7 @@ article .hwc-share-widget ul {
   margin-bottom: 0em;
 }
 .field.field-name-field-image {
-  margin-bottom: 1em;
+  margin-bottom: 0;
 }
 .container .field.field-name-body p a {
   background-color: transparent;
