--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3294,7 +3294,7 @@ article{
 	margin-bottom: 0em;
 }
 .field.field-name-field-image{
-	margin-bottom: 1em;
+	margin-bottom: 0;
 }
 
 .container .field.field-name-body{
