--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -187,6 +187,11 @@
 	.page-publications .views-exposed-widget, .page-events .views-exposed-widget {
 		width: 100% !important;
 		margin-top: 1em;
+		margin-right: 0;
+	}
+
+	#edit-text{
+		max-width: 100% !important;
 	}
 
 	.sidebars_first{
