--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1596,6 +1596,17 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	}
 }
 
+.left-menu.accordion-menu ul.menu > li.expanded ul.menu {
+  display: none;
+}
+.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu {
+  display: block;
+}
+.main-container div.contextual-links-wrapper {
+  left: 5px;
+  right: auto;
+}
+
 .max-width{
 	width: 100%;
 }
