HW20-53 - HWC20 Graphical design (sprint 2)

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -333,6 +333,11 @@
 		}
 	}
 
+	/* Articles */
+	.node-type-article article{
+	    padding-bottom: 1em;
+	}
+
 	/* News */
 	.page-news .main-container h1{
 		border-bottom: 0;
