--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -152,10 +152,10 @@ select{
 		h1{
 			padding-top: 2em;
 		    border-bottom: 0;
-		    font-size: 1.8em;
+		    font-size: 2.2em;
 		    font-style: italic;
 		    font-weight: 400;
-		    color:#e5f1ac;
+		    color:#FFF;
 		}
 
 		h2{
@@ -1607,6 +1607,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   right: auto;
 }
 
+#osha-publication-menu-publications-form .form-item-language {
+  overflow: visible;
+}
+
 .max-width{
 	width: 100%;
 }
@@ -1650,23 +1654,23 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .related-resources-boxes{
 	padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
-  flex-direction: column;
-  div{
-  	margin-bottom: 0;
-  }
-  .recommended-tool{
-    margin-left:0;
-    margin-top:1em;
-  }
+	margin: 0;
+	list-style: none;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	justify-content: space-around;
+	flex-direction: column;
+	div{
+		margin-bottom: 0;
+	}
+  	.recommended-tool{
+	    margin-left:0;
+	    margin-top:1em;
+	}
 }
 
 .direction-column{
@@ -1678,7 +1682,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   	justify-content: flex-end;
   	border-top: 1px solid black;
   	margin-top: 2em;
-  	padding-top: 2em;
+  	padding-top: 1.3em;
   	padding-bottom: 1em;
 	a{
 		align-self: center;
@@ -1696,7 +1700,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   	justify-content: space-between;
   	border-top: 1px solid black;
   	margin-top: 2em;
-  	padding-top: 2em;
+  	padding-top: 1.3em;
   	padding-bottom: 1em;
 	a{
 		align-self: center;
@@ -1726,7 +1730,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	flex-direction: column;
 	margin-left: 1em;
 	span{
-		width: 100px;
+		width: 160px;
 	}
 }
 
