--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -131,10 +131,10 @@ select {
 .intro-splash-20 .views-row-first h1 {
   padding-top: 2em;
   border-bottom: 0;
-  font-size: 1.8em;
+  font-size: 2.2em;
   font-style: italic;
   font-weight: 400;
-  color: #e5f1ac;
+  color: #FFF;
 }
 .intro-splash-20 .views-row-first h2 {
   color: #FFF;
@@ -1443,6 +1443,9 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   left: 5px;
   right: auto;
 }
+#osha-publication-menu-publications-form .form-item-language {
+  overflow: visible;
+}
 .max-width {
   width: 100%;
 }
@@ -1506,7 +1509,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   justify-content: flex-end;
   border-top: 1px solid black;
   margin-top: 2em;
-  padding-top: 2em;
+  padding-top: 1.3em;
   padding-bottom: 1em;
 }
 .previous-next a {
@@ -1523,7 +1526,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   justify-content: space-between;
   border-top: 1px solid black;
   margin-top: 2em;
-  padding-top: 2em;
+  padding-top: 1.3em;
   padding-bottom: 1em;
 }
 .previous-next.two-arrows a {
@@ -1552,7 +1555,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   margin-left: 1em;
 }
 .previous-text span {
-  width: 100px;
+  width: 160px;
 }
 .next {
   display: flex;
@@ -3248,6 +3251,10 @@ div.workbench-info-block {
   .page-publications .pages {
     display: block;
     width: 100%;
+  }
+  /* Articles */
+  .node-type-article article {
+    padding-bottom: 1em;
   }
   /* News */
   .page-news .main-container h1 {
